--- a/views/menuPermissionMaintenance.html
+++ b/views/menuPermissionMaintenance.html
@@ -52,12 +52,12 @@
                     <div class="mnue_content">
                         <div class="search_text_div_model">
                             <sapn class="text-content-model">菜单权限名称：</sapn>
-                            <input type="text">
+                            <input type="text" id="mnue-permission-desc">
                             <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                         </div>
                         <div class="search_text_div_model">
                             <sapn class="text-content-model">菜单权限代码：</sapn>
-                            <input type="text">
+                            <input type="text" id="mnue-permission-code">
                             <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                         </div>
                         <button type="button" class="btn btn-info" id="mnue-permission-maintenance">保存</button>
