--- a/public/css/mnuePermissionMaintenance/mnuePermissionMaintenance.less
+++ b/public/css/mnuePermissionMaintenance/mnuePermissionMaintenance.less
@@ -43,7 +43,7 @@
         .text-content-model {
           float: left;
         }
-        input {
+        input.search_text_model {
           height: 25px;
           float: left;
           border-width: 1px;
@@ -51,9 +51,11 @@
           border-color: #cccccc;
           font-size: 12px;
           padding-left: 5px;
-          border-radius: 3px;
+          border-right: none;
+          border-radius: 3px 0 0 3px;
+          background-color: #f3f3f3;
         }
-        button {
+        button.search_btn_model {
           height: 25px;
           float: left;
           top: 0px;
@@ -119,6 +121,7 @@
     border: 0;
     min-width: 0;
   }
+
 }
 span.no-content{
   display: inline-block;
@@ -126,4 +129,23 @@ span.no-content{
   height: 5px;
   margin-right: 10px;
 }
-
+.mnue-permission-manger-tree {
+  padding: 10px;
+  ul.mnue-permission-manger-model {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li {
+      position: relative;
+      padding: 8px;
+      background: #eeeeee;
+      border-radius: 3px;
+      margin-bottom: 10px;
+    }
+    li:hover {
+      cursor: pointer;
+      background: lightblue;
+      color: white;
+    }
+  }
+}
