--- a/views/menuPermissionMaintenance.html
+++ b/views/menuPermissionMaintenance.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
         <span class="home-page glyphicon glyphicon-home" onclick="utils.setHomePage('{{url}}')" style="cursor: pointer"></span>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right tab_mnue">
             <li><a href="/baixiu/personMaintenance"><i class="fa fa-user"></i>个人中心</a></li>
             <li><a href="/baixiu/loginout"><i class="fa fa-sign-out"></i>退出</a></li>
         </ul>
@@ -26,8 +26,8 @@
     <div class="container-fluid">
         <div>
             <ul class="nav nav-tabs mnue-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#mnue_permission_list" id="mnue-permission-list"  data-toggle="tab">菜单权限列表</a></li>
-                <li role="presentation" ><a href="#mnue_permission_add" id="mnue-permission-add" data-toggle="tab">菜单权限添加</a></li>
+                <li id="tab_li_list" role="presentation" class="active"><a href="#mnue_permission_list" id="mnue-permission-list"  data-toggle="tab">菜单权限列表</a></li>
+                <li id="tab_li_list_add" role="presentation" ><a href="#mnue_permission_add" id="mnue-permission-add" data-toggle="tab">菜单权限添加</a></li>
             </ul>
             <div class="tab-content mnue-permission-content">
                 <div class="tab-pane active" id="mnue_permission_list">
@@ -118,7 +118,7 @@
                 <td> <%= returnData[i].permissions_desc %> </td>
                 <td> <%= returnData[i].permissions_code %> </td>
                 <td>
-                    <a href="javascript:;">修改</a>
+                    <a href="javascript:;" onclick="modifyPermission('<%= returnData[i].permissions_code %>','<%= returnData[i].permissions_desc %>')">修改</a>
                     <a href="javascript:;">删除</a>
                 </td>
             </tr>
