--- a/views/permissionDistribution.html
+++ b/views/permissionDistribution.html
@@ -36,11 +36,11 @@
                 <div style="background:#ffffff;" class="clearfix">
                     <div class="search_text_div_model">
                         <sapn class="text-content-model">昵称：</sapn>
-                        <input type="text" class="search_text_model nick_name">
+                        <input type="text" placeholder="请输入昵称" class="search_text_model nick_name">
                      </div>
                     <div class="search_text_div_model">
                         <sapn class="text-content-model">账号：</sapn>
-                        <input type="text" class="search_text_model email">
+                        <input type="email" placeholder="请输入登录账号" class="search_text_model email">
                     </div>
                     <button type="button" class="btn btn-info" id="user-search">查询</button>
                 </div>
@@ -62,21 +62,49 @@
                 </table>
             </div>
             <div class="tab-pane" id="per_distribution">
-                <div class="search_text">
-                    出差单号：<input type="text" placeholder="请输入订单编号" id="order-no"/>
-                    <button type="button" class="btn btn-info" id="order-search">查询</button>
-                    <span style="margin-left: 10px">订单状态：</span>
-                    <select id="order_states">
-                    </select>
-                    <button style="margin-left: 10px" type="button" class="btn btn-info" id="order-states-modify">修改</button>
-                </div>
-                <div class="cost_type_list">
-                    <div class="cost_type_list_items"></div>
-                    <div type="button" class="add" id="add_trip_cost">
-                        <span class="add_font glyphicon glyphicon-plus"></span>
-                        <span class="add_text">添加记录</span>
+                <div class="clearfix">
+                    <div class="search_text_div_model">
+                        登录账号：<input type="email" id="email" placeholder="请输入登录账号" class="search_text_model"/>
+                        <button type="button" class="btn btn-info" id="permission-search">查询</button>
                     </div>
                 </div>
+                <div class="user_info_item user_company_list">
+                    <span class="tip_title">所在公司：</span>
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th class="text-center">操作</th>
+                            <th class="text-center">公司机构</th>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="user_info_item user_mnue_permission_list">
+                    <span class="tip_title">菜单权限访问组：</span>
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th class="text-center">操作</th>
+                            <th class="text-center">角色权限</th>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="user_info_item user_data_permission_list">
+                    <span class="tip_title">数据权限访问组：</span>
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th class="text-center">操作</th>
+                            <th class="text-center">数据权限</th>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
         </div>
     </div>
@@ -108,10 +136,175 @@
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center">
-                    <a href="javascript:;" class="btn btn-default btn-xs user_edit">分配</a>
+                    <a href="javascript:;" class="btn btn-default btn-xs user_edit" onclick="distriBution('<%= usersJsonArray[i].email %>')">分配</a>
                 </td>
             </tr>
             <% } %>
+            <% } %>
+    </script>
+    <script type="text/art-template" id="companyList">
+        <% if(companyJsonArray) { %>
+            <% if(companyJsonArray.length == 0) { %>
+            <tr>
+                <td class="text-center">
+                    <span class="plus glyphicon glyphicon-plus"></span>
+                    <span class="mnius glyphicon glyphicon-minus"></span>
+                </td>
+                <td class="text-center">
+                    <div class="search_text_div_model_search">
+                        <sapn class="text-content-model">公司机构：</sapn>
+                        <input type="text" class="search_text_model start_company_type_desc_view"  readonly="readonly">
+                        <input style="display: none" class="start_company_type_code_view" readonly="readonly">
+                        <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                                data-target="#modal_tree" onclick="companyChoose()"></button>
+                    </div>
+                </td>
+            </tr>
+            <% } else { %>
+                <% for(var i = 0;i<companyJsonArray.length ;i++){ %>
+                    <tr>
+                        <td class="text-center">
+                            <span class="plus glyphicon glyphicon-plus"></span>
+                            <span class="mnius glyphicon glyphicon-minus"></span>
+                        </td>
+                        <td class="text-center">
+                            <div class="search_text_div_model_search">
+                                <sapn class="text-content-model">公司机构：</sapn>
+                                <input type="text" class="search_text_model start_company_type_desc_view" value="<%= companyJsonArray[i].descr %>"  readonly="readonly">
+                                <input style="display: none" class="start_company_type_code_view" value="<%= companyJsonArray[i].code %>" readonly="readonly">
+                                <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                                        data-target="#modal_tree" onclick="companyChoose()"></button>
+                            </div>
+                        </td>
+                    </tr>
+                <% } %>
+            <% } %>
+        <% } else { %>
+            <tr>
+                <td class="text-center">
+                    <span class="plus glyphicon glyphicon-plus"></span>
+                    <span class="mnius glyphicon glyphicon-minus"></span>
+                </td>
+                <td class="text-center">
+                    <div class="search_text_div_model_search">
+                        <sapn class="text-content-model">公司机构：</sapn>
+                        <input type="text" class="search_text_model start_company_type_desc_view"  readonly="readonly">
+                        <input style="display: none" class="start_company_type_code_view" readonly="readonly">
+                        <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                                data-target="#modal_tree" onclick="companyChoose('start')"></button>
+                    </div>
+                </td>
+            </tr>
+        <% } %>
+    </script>
+    <script type="text/art-template" id="mnuePerList">
+        <% if(mnueJsonArray) { %>
+        <% if(mnueJsonArray.length == 0) { %>
+        <tr>
+            <td class="text-center">
+                <span class="plus glyphicon glyphicon-plus"></span>
+                <span class="mnius glyphicon glyphicon-minus"></span>
+            </td>
+            <td>
+                <div class="search_text_div_model_search">
+                    <sapn class="text-content-model">角色权限：</sapn>
+                    <input type="text" class="search_text_model start_company_type_desc_view"  readonly="readonly">
+                    <input style="display: none" class="start_company_type_code_view" readonly="readonly">
+                    <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                            data-target="#modal_tree" onclick="companyChoose('start')"></button>
+                </div>
+            </td>
+        </tr>
+        <% } else { %>
+        <% for(var i = 0;i<mnueJsonArray.length ;i++){ %>
+            <tr>
+                <td class="text-center">
+                    <span class="plus glyphicon glyphicon-plus"></span>
+                    <span class="mnius glyphicon glyphicon-minus"></span>
+                </td>
+                <td>
+                    <div class="search_text_div_model_search">
+                        <sapn class="text-content-model">角色权限：</sapn>
+                        <input type="text" class="search_text_model start_company_type_desc_view" value="<%= mnueJsonArray[i].descr %>"  readonly="readonly">
+                        <input style="display: none" class="start_company_type_code_view" value="<%= mnueJsonArray[i].code %>" readonly="readonly">
+                        <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                                data-target="#modal_tree" onclick="mnueChoose()"></button>
+                    </div>
+                </td>
+            </tr>
+            <% } %>
+            <% } %>
+            <% } else { %>
+            <tr>
+                <td class="text-center">
+                    <span class="plus glyphicon glyphicon-plus"></span>
+                    <span class="mnius glyphicon glyphicon-minus"></span>
+                </td>
+                <td>
+                    <div class="search_text_div_model_search">
+                        <sapn class="text-content-model">角色权限：</sapn>
+                        <input type="text" class="search_text_model start_company_type_desc_view"  readonly="readonly">
+                        <input style="display: none" class="start_company_type_code_view" readonly="readonly">
+                        <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                                data-target="#modal_tree" onclick="mnueChoose()"></button>
+                    </div>
+                </td>
+            </tr>
+            <% } %>
+    </script>
+    <script type="text/art-template" id="dataPerList">
+        <% if(dataJsonArray) { %>
+        <% if(dataJsonArray.length == 0) { %>
+        <tr>
+            <td class="text-center">
+                <span class="plus glyphicon glyphicon-plus"></span>
+                <span class="mnius glyphicon glyphicon-minus"></span>
+            </td>
+            <td>
+                <div class="search_text_div_model_search">
+                    <sapn class="text-content-model">数据权限：</sapn>
+                    <input type="text" class="search_text_model start_company_type_desc_view"  readonly="readonly">
+                    <input style="display: none" class="start_company_type_code_view" readonly="readonly">
+                    <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                            data-target="#modal_tree" onclick="companyChoose('start')"></button>
+                </div>
+            </td>
+        </tr>
+        <% } else { %>
+        <% for(var i = 0;i<dataJsonArray.length ;i++){ %>
+            <tr>
+                <td class="text-center">
+                    <span class="plus glyphicon glyphicon-plus"></span>
+                    <span class="mnius glyphicon glyphicon-minus"></span>
+                </td>
+                <td>
+                    <div class="search_text_div_model_search">
+                        <sapn class="text-content-model">数据权限：</sapn>
+                        <input type="text" class="search_text_model start_company_type_desc_view" value="<%= dataJsonArray[i].descr %>" readonly="readonly">
+                        <input style="display: none" class="start_company_type_code_view" value="<%= dataJsonArray[i].code %>" readonly="readonly">
+                        <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                                data-target="#modal_tree" onclick="dataChoose()"></button>
+                    </div>
+                </td>
+            </tr>
+            <% } %>
+            <% } %>
+            <% } else { %>
+            <tr>
+                <td class="text-center">
+                    <span class="plus glyphicon glyphicon-plus"></span>
+                    <span class="mnius glyphicon glyphicon-minus"></span>
+                </td>
+                <td>
+                    <div class="search_text_div_model_search">
+                        <sapn class="text-content-model">数据权限：</sapn>
+                        <input type="text" class="search_text_model start_company_type_desc_view"  readonly="readonly">
+                        <input style="display: none" class="start_company_type_code_view" readonly="readonly">
+                        <button class="search_btn_model glyphicon glyphicon-search"  data-toggle="modal"
+                                data-target="#modal_tree" onclick="dataChoose()"></button>
+                    </div>
+                </td>
+            </tr>
             <% } %>
     </script>
     <script>NProgress.done()</script>
