--- a/views/permissionDistribution.html
+++ b/views/permissionDistribution.html
@@ -182,7 +182,7 @@
             <tr>
                 <td class="text-center">
                     <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'companyList')"></span>
-                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'companyList')"></span>
                 </td>
                 <td class="text-center">
                     <div class="search_text_div_model_search">
@@ -198,7 +198,7 @@
                     <tr>
                         <td class="text-center">
                             <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'companyList')"></span>
-                            <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                            <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'companyList')"></span>
                         </td>
                         <td class="text-center">
                             <div class="search_text_div_model_search">
@@ -215,7 +215,7 @@
             <tr>
                 <td class="text-center">
                     <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'companyList')"></span>
-                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'companyList')"></span>
                 </td>
                 <td class="text-center">
                     <div class="search_text_div_model_search">
@@ -234,14 +234,14 @@
         <tr>
             <td class="text-center">
                 <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'mnuePerList')"></span>
-                <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'mnuePerList')"></span>
             </td>
             <td>
                 <div class="search_text_div_model_search">
                     <sapn class="text-content-model">角色权限：</sapn>
                     <input type="text" class="search_text_model mnue_per_desc_view"  readonly="readonly">
                     <input style="display: none" class="mnue_per_code_view" readonly="readonly">
-                    <button class="search_btn_model glyphicon glyphicon-search" onclick="mnuePerChoose(this)"></button>
+                    <button class="search_btn_model glyphicon glyphicon-search" onclick="mnuePerChoose(this,'mnuePerList')"></button>
                 </div>
             </td>
         </tr>
@@ -250,7 +250,7 @@
             <tr>
                 <td class="text-center">
                     <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'mnuePerList')"></span>
-                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'mnuePerList')"></span>
                 </td>
                 <td>
                     <div class="search_text_div_model_search">
@@ -267,7 +267,7 @@
             <tr>
                 <td class="text-center">
                     <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'mnuePerList')"></span>
-                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'mnuePerList')"></span>
                 </td>
                 <td>
                     <div class="search_text_div_model_search">
@@ -286,7 +286,7 @@
         <tr>
             <td class="text-center">
                 <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'dataPerList')"></span>
-                <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'dataPerList')"></span>
             </td>
             <td>
                 <div class="search_text_div_model_search">
@@ -302,7 +302,7 @@
             <tr>
                 <td class="text-center">
                     <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'dataPerList')"></span>
-                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'dataPerList')"></span>
                 </td>
                 <td>
                     <div class="search_text_div_model_search">
@@ -319,7 +319,7 @@
             <tr>
                 <td class="text-center">
                     <span class="plus glyphicon glyphicon-plus" onclick="addPer(this,'dataPerList')"></span>
-                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this)"></span>
+                    <span class="mnius glyphicon glyphicon-minus" onclick="minusPer(this,'dataPerList')"></span>
                 </td>
                 <td>
                     <div class="search_text_div_model_search">
